--- a/src/App.css
+++ b/src/App.css
@@ -17,4 +17,14 @@ body {
     background-repeat: no-repeat;
     border-radius: 50%;
     border: 10px solid rgb(187, 112, 68);
+    position: relative;
+}
+
+.clock .number {
+    --rotation: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transform: rotate(var(--rotation));
 }
