--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,29 @@ body {
     position: absolute;
     bottom: 50%;
     left: 50%;
-    width: 10px;
+    border: 1px solid white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: black;
+    transform-origin: bottom ;
+    transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+}
+
+.clock .hand.second {
+    width: 4px;
+    height: 43%;
+    background-color: red;
+    z-index: 10;
+}
+
+.clock .hand.minute {
+    width: 9px;
     height: 40%;
     background-color: black;
-    transform: translateX(-50%) rotate(var(--rotation));
+}
+
+.clock .hand.hour {
+    width: 7px;
+    height: 33%;
+    background-color: black;
 }
