--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,21 @@ body {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: black;
-    transform-origin: bottom ;
+    transform-origin: bottom;
     transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+}
+
+.clock:after {
+    content: '';
+    position: absolute;
+    background-color: black;
+    z-index: 11;
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
 }
 
 .clock .hand.second {
