--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
 
 body {
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.App-footer {
+    text-align: center;
+    padding-top: 20px;
 }
 
 .clock {
