Add upright numbers

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,47 @@ body {
     position: relative;
 }
 
+.number {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /*top: 0;*/
+    /*left: 0;*/
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 700;
+    --rotation: 0;
+    transform: rotate(var(--rotation));
+}
+
+.reverse {
+    --reverse: 0;
+    transform: rotate(var(--reverse));
+}
+.number1 { --rotation: 30deg}
+.number2 { --rotation: 60deg}
+.number3 { --rotation: 90deg}
+.number4 { --rotation: 120deg}
+.number5 { --rotation: 150deg}
+.number6 { --rotation: 180deg}
+.number7 { --rotation: 210deg}
+.number8 { --rotation: 240deg}
+.number9 { --rotation: 270deg}
+.number10 {--rotation: 300deg}
+.number11 {--rotation: 330deg}
+/*.number12 {--rotation: 30deg}*/
+
+.number1 div{ --reverse: -30deg}
+.number2 div{ --reverse: -60deg}
+.number3 div{ --reverse: -90deg}
+.number4 div{ --reverse: -120deg}
+.number5 div{ --reverse: -150deg}
+.number6 div{ --reverse: -180deg}
+.number7 div{ --reverse: -210deg}
+.number8 div{ --reverse: -240deg}
+.number9 div{ --reverse: -270deg}
+.number10 div{--reverse: -300deg}
+.number11 div{--reverse: -330deg}
 .clock .number {
     --rotation: 0;
     position: absolute;
